--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,26 @@
 {
-  "cSpell.words": ["Harwood", "mybutton"]
+  "cSpell.words": [
+    "Barrington",
+    "Coursera",
+    "Docu",
+    "dplyr",
+    "ggplot",
+    "Harwood",
+    "Laserfiche",
+    "logit",
+    "matplotlib",
+    "mybutton",
+    "networkx",
+    "nltk",
+    "numpy",
+    "probit",
+    "scikit",
+    "seaborn",
+    "Stata",
+    "stringr",
+    "tidyr",
+    "TIMSS",
+    "TWFE",
+    "XAMPP"
+  ]
 }
