--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,28 @@
     "TIMSS",
     "TWFE",
     "XAMPP"
-  ]
+  ],
+  "terminal.integrated.profiles.windows": {
+
+    "PowerShell": {
+      "source": "PowerShell",
+      "icon": "terminal-powershell"
+    },
+    "Command Prompt": {
+      "path": [
+        "${env:windir}\\Sysnative\\cmd.exe",
+        "${env:windir}\\System32\\cmd.exe"
+      ],
+      "args": [],
+      "icon": "terminal-cmd"
+    },
+    "Git Bash": {
+      "source": "Git Bash"
+    },
+    "R Terminal": {
+      "path": [
+        "${env:windir}\\System32\\cmd.exe"
+      ]
+    }
+  }
 }
